--- a/example/scss/FrontPage.scss
+++ b/example/scss/FrontPage.scss
@@ -5,6 +5,12 @@
   p {
     color: blue;
   }
+  .front {
+    background: url('~golden-gate-heights-2048.jpg');
+  }
+  .fb {
+    background: url('~fb-logo-blue.png');
+  }
 }
 
 div {
