--- a/example/scss/FrontPage.scss
+++ b/example/scss/FrontPage.scss
@@ -6,10 +6,10 @@
     color: blue;
   }
   .front {
-    background: url('~golden-gate-heights-2048.jpg');
+    background: url('golden-gate-heights-2048.jpg');
   }
   .fb {
-    background: url('~fb-logo-blue.png');
+    background: url('fb-logo-blue.png');
   }
 }
 
