updated example for node-sass threadpool issue

--- a/example/scss/FrontPage.scss
+++ b/example/scss/FrontPage.scss
@@ -1,5 +1,5 @@
 @import "./base";
-@import "./mixin";
+//@import "./mixin";
 
 .FrontPage {
   p {
@@ -14,5 +14,5 @@
 }
 
 div {
-  @include hard-reset;
+  //@include hard-reset;
 }
