--- a/example/scss/YetAnother.scss
+++ b/example/scss/YetAnother.scss
@@ -1,5 +1,5 @@
 @import "./base";
-@import "./mixin";
+//@import "./mixin";
 
 .YetAnother {
   p {
@@ -8,5 +8,5 @@
 }
 
 div {
-  @include hard-reset;
+  //@include hard-reset;
 }
